# SFML-Space-Shooter

./: CMakeLists.txt  README.md  README.txt  main.cpp  tasks.TODO
.github/workflows/: codeql-analysis.yml
CLion (old)/: CMakeLists.txt  README.txt
CLion (old)/GameFiles/: MAIN_INCLUDE.h
CLion (old)/GameFiles/Header Files/: Asteroid.h  Entity.h  GENERIC_INCLUDE.h  Helper_Functions.h  HudElement.h  Laser.h  Ship.h  SoundManager.h  Values.h
CLion (old)/GameFiles/Source Files/: Asteroid.cpp  Entity.cpp  HudElement.cpp  Laser.cpp  MusicManager.cpp  Ship.cpp  SoundManager.cpp
GameFiles/: MAIN_INCLUDE.h
GameFiles/Header Files/: Asteroid.h  Entity.h  GENERIC_INCLUDE.h  Helper_Functions.h  HudElement.h  Laser.h  Ship.h  SoundManager.h  Values.h
GameFiles/Source Files/: Asteroid.cpp  Entity.cpp  HudElement.cpp  Laser.cpp  MusicManager.cpp  Ship.cpp  SoundManager.cpp
VSCode (new)/: CMakeLists.txt  README.txt  main.cpp
VSCode (new)/files/: asteroid.cpp  asteroid.h  entity.cpp  entity.h  generic_include.h  laser.cpp  laser.h  main_inlcude.h  ship.cpp  sound_manager.cpp  sound_manager.h
files/: asteroid.cpp  asteroid.h  entity.h  generic_include.h  hud_element.cpp  hud_element.h  laser.cpp  laser.h  main_inlcude.h  music_manager.cpp  ship.cpp  ship.h  sound_manager.cpp  sound_manager.h
